Crash with 'Split Edges and Faces' | Auto-Merge #75994

Closed
opened 2020-04-22 10:58:36 +02:00 by irex124 · 5 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-15 22:31, hash: 32cd853294
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when trying to extrude if "Split edges and faces" is turned on in auto-merge setting.

Exact steps for others to reproduce the error
Auto-merge crash.blend
Open the following file, select everything and then extrude. Blender should crash when you confirm the extrusion.

blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-15 22:31, hash: `32cd853294` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when trying to extrude if "Split edges and faces" is turned on in auto-merge setting. **Exact steps for others to reproduce the error** [Auto-merge crash.blend](https://archive.blender.org/developer/F8488909/Auto-merge_crash.blend) Open the following file, select everything and then extrude. Blender should crash when you confirm the extrusion. [blender_debug_output.txt](https://archive.blender.org/developer/F8488914/blender_debug_output.txt)
Author
Contributor

Added subscriber: @Pasang

Added subscriber: @Pasang

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-04-22 15:13:27 +02:00

This issue was referenced by f9649e2bf1

This issue was referenced by f9649e2bf1848d44ddf8739dd3ef6e087f291f28

This issue was referenced by f5b540593c

This issue was referenced by f5b540593cd599cf47ad6763b87033c6c0964d87

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#75994
No description provided.