Fix T75994: Crash with 'Split Edges and Faces' | Auto-Merge

It occurred when an edge was collapsed into a vert that was not part of it.
This is common when the distance for merging is relatively large.